--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="PC Shop, Buy computer components"
     />
     <link rel="icon" type="image/png" href="./images/fav-icon.png">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
